# netdiag

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  audit.toml  netdiag_report_1767920503.txt  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
apps/tauri/: MOBILE_SETUP.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
apps/tauri/src/: app.css
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: mobile.json
apps/tauri/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
apps/tauri/src/lib/: index.ts
apps/tauri/src/lib/components/: index.ts
apps/tauri/src/lib/components/icons/: Icon.svelte  iconPaths.ts  index.ts
apps/tauri/src/lib/components/layout/: AppShell.svelte
apps/tauri/src/lib/components/navigation/: Sidebar.svelte  TabBar.svelte
apps/tauri/src/lib/components/ui/: IOSList.svelte  IOSListCell.svelte  IOSListSection.svelte  index.ts
apps/tauri/src/lib/platform/: detect.ts  index.ts  store.svelte.ts
apps/tauri/src/lib/styles/tokens/: _android.css  _base.css  _ios.css  _linux.css  _macos.css  _windows.css
apps/tauri/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/tauri/src/routes/capture/: +page.svelte
apps/tauri/src/routes/diagnose/: +page.svelte
apps/tauri/src/routes/dns/: +page.svelte
apps/tauri/src/routes/fix/: +page.svelte
apps/tauri/src/routes/interfaces/: +page.svelte
apps/tauri/src/routes/ping/: +page.svelte
apps/tauri/src/routes/report/: +page.svelte
apps/tauri/src/routes/speed/: +page.svelte
apps/tauri/src/routes/traceroute/: +page.svelte
apps/tauri/src/routes/wifi/: +page.svelte
crates/netdiag-autofix/: Cargo.toml
crates/netdiag-autofix/src/: actions.rs  engine.rs  error.rs  lib.rs  rollback.rs
crates/netdiag-capture/: Cargo.toml
crates/netdiag-capture/src/: capture.rs  decode.rs  error.rs  filter.rs  lib.rs  stats.rs
crates/netdiag-cli/: Cargo.toml
crates/netdiag-cli/src/: app.rs  main.rs
crates/netdiag-cli/src/commands/: capture.rs  completions.rs  config.rs  daemon.rs  diagnose.rs  fix.rs  info.rs  mod.rs  ping.rs  report.rs  speed.rs  traceroute.rs  tui.rs  wifi.rs
crates/netdiag-cli/tests/: integration.rs
crates/netdiag-connectivity/: Cargo.toml
crates/netdiag-connectivity/src/: dns.rs  lib.rs  path_analyzer.rs  ping.rs  traceroute.rs
crates/netdiag-daemon/: Cargo.toml
crates/netdiag-daemon/src/: config.rs  error.rs  ipc.rs  lib.rs  monitor.rs  scheduler.rs  service.rs
crates/netdiag-integrations/: Cargo.toml
crates/netdiag-integrations/src/: bgp.rs  error.rs  ipinfo.rs  lib.rs  registry.rs  shodan.rs  ssllabs.rs
crates/netdiag-platform/: Cargo.toml
crates/netdiag-platform-android/: Cargo.toml
crates/netdiag-platform-android/src/: lib.rs  network.rs  privilege.rs  system.rs  wifi.rs
crates/netdiag-platform-ios/: Cargo.toml  build.rs
crates/netdiag-platform-ios/src/: lib.rs  network.rs  privilege.rs  system.rs  wifi.rs
crates/netdiag-platform-linux/: Cargo.toml
crates/netdiag-platform-linux/src/: lib.rs
crates/netdiag-platform-linux/src/autofix/: mod.rs
crates/netdiag-platform-linux/src/network/: mod.rs
crates/netdiag-platform-linux/src/privilege/: mod.rs
crates/netdiag-platform-linux/src/system/: mod.rs
crates/netdiag-platform-linux/src/wifi/: mod.rs
crates/netdiag-platform-macos/: Cargo.toml
crates/netdiag-platform-macos/src/: lib.rs
crates/netdiag-platform-macos/src/autofix/: mod.rs
crates/netdiag-platform-macos/src/network/: mod.rs
crates/netdiag-platform-macos/src/privilege/: mod.rs
crates/netdiag-platform-macos/src/system/: mod.rs
crates/netdiag-platform-macos/src/wifi/: mod.rs
crates/netdiag-platform-windows/: Cargo.toml
crates/netdiag-platform-windows/src/: autofix.rs  lib.rs  network.rs  privilege.rs  system.rs  wifi.rs
crates/netdiag-platform/src/: detection.rs  factory.rs  lib.rs
crates/netdiag-platform/src/traits/: autofix.rs  capture.rs  mod.rs  network.rs  privilege.rs  system.rs  wifi.rs
crates/netdiag-reports/: Cargo.toml
crates/netdiag-reports/src/: error.rs  lib.rs  report.rs
crates/netdiag-reports/src/formats/: html.rs  html_dark.css  html_light.css  json.rs  markdown.rs  mod.rs  pdf.rs  text.rs
crates/netdiag-speed/: Cargo.toml
crates/netdiag-speed/src/: error.rs  http.rs  iperf.rs  lib.rs  result.rs
crates/netdiag-storage/: Cargo.toml
crates/netdiag-storage/src/: database.rs  error.rs  lib.rs  models.rs
crates/netdiag-storage/src/repository/: dns.rs  mod.rs  ping.rs  session.rs  traceroute.rs
crates/netdiag-tui/: Cargo.toml
crates/netdiag-tui/src/: app.rs  error.rs  event.rs  lib.rs  ui.rs  widgets.rs
crates/netdiag-types/: Cargo.toml
crates/netdiag-types/src/: config.rs  error.rs  lib.rs
crates/netdiag-types/src/capture/: mod.rs
crates/netdiag-types/src/diagnostics/: jitter.rs  mod.rs  path_analysis.rs  ping.rs  speed.rs  traceroute.rs
crates/netdiag-types/src/network/: address.rs  dns.rs  interface.rs  mod.rs  route.rs
crates/netdiag-types/src/report/: mod.rs
crates/netdiag-types/src/sync/: mod.rs
crates/netdiag-types/src/system/: mod.rs
crates/netdiag-types/src/wifi/: access_point.rs  channel.rs  enterprise.rs  mod.rs  security.rs
crates/netdiag-wifi/: Cargo.toml
crates/netdiag-wifi/src/: analysis.rs  channel.rs  error.rs  interference.rs  lib.rs  quality.rs  security.rs  survey.rs
xtask/: Cargo.toml
xtask/src/: main.rs
