[workspace]
resolver = "2"
members = [
    "xtask",
    "crates/*",
    "apps/tauri/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Kevin Elliott <kevin@kevinelliott.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kevinelliott/netdiag"
description = "Comprehensive network diagnostics tool"
keywords = ["network", "diagnostics", "ping", "traceroute", "wifi"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
futures = "0.3"
async-trait = "0.1"

# CLI & TUI
clap = { version = "4.5", features = ["derive", "env", "wrap_help", "cargo"] }
clap_complete = "4.5"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
comfy-table = "7.1"

# Networking
netdev = "0.31"
hickory-resolver = { version = "0.24", features = ["tokio-runtime", "dns-over-rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
socket2 = "0.5"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# Error handling
thiserror = "2.0"
color-eyre = "0.6"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
bytes = "1.9"
strum = { version = "0.26", features = ["derive"] }
derive_more = { version = "1.0", features = ["display", "from", "into"] }
cfg-if = "1.0"

# Internal crates
netdiag-types = { path = "crates/netdiag-types" }
netdiag-core = { path = "crates/netdiag-core" }
netdiag-platform = { path = "crates/netdiag-platform" }
netdiag-connectivity = { path = "crates/netdiag-connectivity" }
netdiag-wifi = { path = "crates/netdiag-wifi" }
netdiag-speed = { path = "crates/netdiag-speed" }
netdiag-capture = { path = "crates/netdiag-capture" }
netdiag-integrations = { path = "crates/netdiag-integrations" }
netdiag-reports = { path = "crates/netdiag-reports" }
netdiag-storage = { path = "crates/netdiag-storage" }
netdiag-autofix = { path = "crates/netdiag-autofix" }
netdiag-daemon = { path = "crates/netdiag-daemon" }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
# Allow some pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3
