[package]
name = "netdiag-platform-android"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Android platform implementation for netdiag"
keywords = ["network", "diagnostics", "android", "mobile"]
categories = ["network-programming"]

[dependencies]
netdiag-types = { workspace = true }
netdiag-platform = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Android specific - JNI bindings
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
