[package]
name = "netdiag-platform-ios"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "iOS platform implementation for netdiag"
keywords = ["network", "diagnostics", "ios", "mobile"]
categories = ["network-programming"]

[dependencies]
netdiag-types = { workspace = true }
netdiag-platform = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# iOS specific
[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"
libc = "0.2"
core-foundation = "0.10"
core-foundation-sys = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
