[package]
name = "netdiag-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and error definitions for netdiag"
keywords = ["network", "diagnostics", "types"]
categories = ["data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
strum = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
