[package]
name = "netdiag-wifi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WiFi analysis and diagnostics module for netdiag"
keywords = ["network", "diagnostics", "wifi", "wireless", "analysis"]
categories = ["network-programming"]

[dependencies]
netdiag-types = { workspace = true }
netdiag-platform = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
